--- a/src/pages/map/map.scss
+++ b/src/pages/map/map.scss
@@ -1,3 +1,10 @@
 page-map {
+    
+    button.refresher {
+        background: transparent;
+    }
 
+    ion-icon.ion-md-refresh {
+        font-size: 2em;
+    }
 }
