--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,1 +1,4 @@
- <div #map_canvas id="map_canvas"></div>
+<div>{{ runnerLocationLat }} {{ runnerLocationLng }}</div>
+<div #map_canvas id="map_canvas"> 
+       
+</div>
