--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,5 +1,9 @@
 page-home {
 
+    .textAlignRight {
+        text-align: right;
+    }
+
     .toggle-md .toggle-icon {
         background-color: map-get($colors, primary);        
     }
