--- a/src/pages/task-detail/task-detail.scss
+++ b/src/pages/task-detail/task-detail.scss
@@ -27,7 +27,7 @@ task-detail {
         display: flex;
         justify-content: space-around;
         flex: 1 0 auto;
-        // align-content: flex-start;         
+        text-align: center;            
         
         .date-time {
             align-self: flex-start;
